Partial_14Dec2021/force-app/main/default/objects/Share__c/Share__c.object-meta.xml
<CustomObject>
    <label>Share</label>
    <nameField>
        <label>Share Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shares</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>