Partial_14Dec2021/force-app/main/default/objects/Share__c/fields/Account_Access__c.field-meta.xml
<CustomField>
    <fullName>Account_Access__c</fullName>
    <label>Account Access</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>